<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Games">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@color/md_theme_light_primaryContainer"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@mipmap/games_angrybirds_foreground"
                    android:importantForAccessibility="no" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/angry_birds" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@color/md_theme_light_primaryContainer"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@mipmap/games_dragonfly_foreground"
                    android:importantForAccessibility="no" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dragon_fly" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/md_theme_light_primaryContainer"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@mipmap/games_hillclimbingracing_foreground"
                    android:importantForAccessibility="no" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hill_climbing_racing" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/md_theme_light_primaryContainer"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@mipmap/games_radiantdefense_foreground"
                    android:importantForAccessibility="no" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiant_defence" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/md_theme_light_primaryContainer"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@tools:sample/avatars"
                    app:srcCompat="@mipmap/games_pocketsoccer_foreground"
                    android:importantForAccessibility="no" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pocket_soccer" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/md_theme_light_primaryContainer"
            android:layout_marginBottom="2dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@tools:sample/avatars"
                app:srcCompat="@mipmap/games_ninijump_foreground"
                android:importantForAccessibility="no" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ninja_jump" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/md_theme_light_primaryContainer"
            android:layout_marginBottom="2dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@tools:sample/avatars"
                app:srcCompat="@mipmap/games_aircontrol_foreground"
                android:importantForAccessibility="no" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ari_control" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>