<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlayer"
    android:layout_gravity="center_vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="0.1"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:visibility="invisible"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombrefonetico" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:visibility="invisible"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="hint" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_weight="0.3"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/imageView3"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button"
                    android:text="Cambiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_dynamic_secondary50"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <EditText
                    android:id="@+id/phone"
                    android:ems="10"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="0.9"
                    android:hint="@string/telefono"
                    android:inputType="phone" />

            </TableRow>

            <TableRow
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:gravity="end">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="0.9"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>